--- a/angular.json
+++ b/angular.json
@@ -148,7 +148,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "9ed15d1a-5c35-44b0-bf5f-dd62d45973ce"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
